--- a/app/view/user/create.html.twig
+++ b/app/view/user/create.html.twig
@@ -9,5 +9,14 @@
 </head>
 <body>
 <h1>Create</h1>
+
+<form action='' method='post'>
+    <input type='text' name='name' id='name'>
+    <input type='text' name='email' id='email'>
+    <input type='text' name='password' id='password'>
+    <input type='text' name='checkpassword' id='checkpassword'>
+    <input type='submit'>
+
+</form>
 </body>
 </html>
